# proof-cost-network

./: CMakeLists.txt  README.md
Games/: Bitboard.h  CMakeLists.txt  Color.h  ColorMessage.h  ConfigureLoader.cpp  ConfigureLoader.h  FeatureIndexList.h  FeatureList.h  GameBase.h  GameConfigure.cpp  GameConfigure.h  Go.cpp  Go.h  Gomoku.cpp  Gomoku.h  HashTable.h  Point.h  Rand64.h  SgfLoader.h  TieTacToe.h  TimeSystem.h  list.h
MiniZero/: BaseMCTS.cpp  BaseMCTS.h  BaseMasterSlave.h  BaseSolver.cpp  BaseSolver.h  BaseWorkerHandler.h  CMakeLists.txt  Configure.cpp  Configure.h  DFPNSolver.cpp  DFPNSolver.h  Definition.h  DepthSolver.h  GTPEngine.cpp  GTPEngine.h  MCTSSolver.cpp  MCTSSolver.h  Main.cpp  Network.cpp  Network.h  OpenAddressHashTable.h  Random.cpp  Random.h  SizeSolver.h  SpinLock.h  StatisticData.h  Timer.h  TranspositionTable.h  TreeNode.h  ZeroMCTS.cpp  ZeroMCTS.h  ZeroSelfPlay.cpp  ZeroSelfPlay.h  ZeroServer.cpp  ZeroServer.h
docker/: Dockerfile
fight_cfg/: go_AZ.cfg  go_B-heur.cfg  go_B-max.cfg  go_W-heur.cfg  go_W-max.cfg  gomoku_AZ-4T.cfg  gomoku_AZ.cfg  gomoku_heur-4T.cfg  gomoku_heur.cfg  gomoku_max-4T.cfg  gomoku_max.cfg
fight_results/: View.sh
py/: CMakeLists.txt  Configuration.py  Network.py  Train.py  pybind.cpp
scripts/: clean-up.sh  display_fight_results_go.sh  display_fight_results_gomoku.sh  display_solver_results_go.sh  display_solver_results_gomoku.sh  fight.sh  fight_against_AZ_go.sh  fight_against_AZ_gomoku.sh  run_go.sh  run_go_parallel.sh  run_gomoku.sh  run_gomoku_parallel.sh  setup-cmake.sh  solve.sh  solve_all.sh  worker.sh  (+1 more)
(+193 files in other folders)
